02-node-server-App-Deployment-and-NodePortService.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-server-deployment
  labels:
    app: node-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-server
  template:
    metadata:
      labels:
        app: node-server
    spec:
      containers:
        - name: node-server
          image: 773910315572.dkr.ecr.us-east-1.amazonaws.com/cicd-nodeserver-ecs
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: node-server-nodeport-service
  labels:
    app: node-server
  annotations:
    #Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer
    alb.ingress.kubernetes.io/healthcheck-path: /app/
spec:
  type: NodePort
  selector:
    app: node-server
  ports:
    - port: 3001
      targetPort: 3001
